Cleaned up minor layout issue with the col widths of the files table on the dataset pg. [ref #2731 #2730]

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -624,7 +624,7 @@ div[id$="filesTable"] td.col-file-thumb {border-right:0;}
 div[id$="filesTable"] td.col-file-thumb div.thumbnail-block {position:relative;width:64px;height:64px;margin:0 auto;}
 div[id$="filesTable"] td.col-file-thumb div.thumbnail-block span.file-thumbnail-icon {font-size:62px;line-height:1.05;}
 div[id$="filesTable"] td.col-file-thumb div.thumbnail-block div.file-icon-restricted-block {display:block;position:absolute;bottom:-4px;right:-1px;}
-div[id$="filesTable"] td.col-file-metadata {width: 33.3333% !important; padding-left:0; border-left:0; border-right:0; text-align:left; font-weight:normal;}
+div[id$="filesTable"] td.col-file-metadata {/*width: 33.3333% !important;*/ padding-left:0; border-left:0; border-right:0; text-align:left; font-weight:normal;}
 div[id$="filesTable"] td.col-file-action {/*width:320px !important;*/ border-left:0; overflow:visible;}
 div[id$="filesTable"] div.file-tags-block {padding-bottom:2px;}
 div[id$="filesTable"] div.file-tags-block a.ui-commandlink {font-size:12px;}
@@ -639,17 +639,10 @@ div[id$="filesTable"] thead[id$="filesTable_head"] th.ui-state-default:first-of-
 div[id$="filesTable"] thead[id$="filesTable_head"] th.ui-state-default:last-of-type {border-right: 1px solid #e6e6e6; border-top-right-radius: 4px;}
 div[id$="filesTable"] thead[id$="filesTable_head"] tr {background-color: #f5f5f5; background-image: -moz-linear-gradient(center top , #ffffff, #e6e6e6); background-repeat: repeat-x;}
 
-div[id$="filesTable"] thead[id$="filesTable_head"] th.ui-selection-column {width:40px !important; padding:4px 10px;}
+div[id$="filesTable"] thead[id$="filesTable_head"] th.ui-selection-column {/*width:40px !important;*/ padding:4px 10px;}
 div[id$="filesTable"] thead[id$="filesTable_head"] th.ui-selection-column .ui-chkbox-box.ui-widget {margin-top:0 !important;}
-div[id$="filesTable"] div.ui-datatable-scrollable-body table colgroup col:nth-child(1), 
-div[id$="filesTable"] tbody[id$="filesTable_data"] td.ui-selection-column {width:40px !important;}
 
-div[id$="filesTable"] div.ui-datatable-scrollable-body table colgroup col:nth-child(2), 
-div[id$="filesTable"] tbody[id$="filesTable_data"] td.col-file-thumb {width:64px !important;}
-
-div[id$="filesTable"] div.ui-datatable-scrollable-body table colgroup col:nth-child(4) {/*width:320px !important;*/}
-
-div[id$="filesTable"] div.ui-datatable-scrollable-body table colgroup {display:none;}
+div[id$="filesTable"].ui-datatable.ui-datatable-scrollable {padding-right:12px;}
 
 span.ingest-warning {display:inline-block; font-size:30px; line-height:1.42857; vertical-align: middle;}
 span.ingest-warning span.glyphicon {top:5px;} 
